envoy-config.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/tea"
                route:
                  cluster: tea
              - match:
                  prefix: "/coffee"
                route:
                  cluster: coffee
          http_filters:
          - name: envoy.router
            config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain: { filename: "/certs/svid.pem" }
            private_key: { filename: "/certs/svid_key.pem" }
  clusters:
  - name: tea               # required for rest of config
    connect_timeout: 0.25s
    type: strict_dns        # service discovery type
    lb_policy: round_robin  # load balancing policy
    hosts:
    - socket_address:
        address: service1   # this has to match the service name in the docker-compose
        port_value: 8080
  - name: coffee
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: service2
        port_value: 8080

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
